--- a/package.json
+++ b/package.json
@@ -26,10 +26,7 @@
   ],
   "author": "Andres coello goyes",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/GandresCoello18/backend-cici/issues"
-  },
-  "homepage": "https://github.com/GandresCoello18/backend-cici#readme",
+  "homepage": "",
   "dependencies": {
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
@@ -37,6 +34,7 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
     "@types/mysql": "^2.15.17",
     "@types/pino": "^6.3.5",
     "@types/uuid": "^8.3.0",
@@ -46,6 +44,7 @@
     "envalid": "^6.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "pino": "^6.11.0",
     "typescript": "^4.1.3",
@@ -54,8 +53,8 @@
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "3.0.0",
-    "@typescript-eslint/parser": "3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "commitizen": "4.1.2",
     "cz-conventional-changelog": "3.2.0",
     "env-cmd": "10.1.0",
