--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "Servicio de api rest para el consumo de datos en cici beauty place",
   "main": "index.js",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x",
+    "yarn": "1.x"
+  },
   "scripts": {
     "prebuild": "yarn clean",
     "build": "tsc",
