--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "pino": "^6.11.0",
-    "typescript": "^4.1.3",
+    "typescript": "^3.9.3",
+    "ts-node-dev": "^1.0.0-pre.56",
+    "tsc-watch": "4.2.9",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -68,9 +70,7 @@
     "eslint-plugin-prettier": "3.1.3",
     "husky": "4.2.5",
     "lint-staged": "10.2.6",
-    "prettier": "2.0.5",
-    "ts-node-dev": "^1.0.0-pre.56",
-    "tsc-watch": "4.2.9"
+    "prettier": "2.0.5"
   },
   "config": {
     "commitizen": {
