--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/multer": "^1.4.5",
     "@types/mysql": "^2.15.17",
     "@types/pino": "^6.3.5",
+    "@types/randomcolor": "^0.5.5",
     "@types/uuid": "^8.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -52,9 +53,10 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "pino": "^6.11.0",
-    "typescript": "^3.9.3",
+    "randomcolor": "^0.6.2",
     "ts-node-dev": "^1.0.0-pre.56",
     "tsc-watch": "4.2.9",
+    "typescript": "^3.9.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
