chore(service email): send email for client

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.5",
     "@types/mysql": "^2.15.17",
+    "@types/nodemailer": "^6.4.1",
     "@types/pino": "^6.3.5",
     "@types/randomcolor": "^0.5.5",
     "@types/uuid": "^8.3.0",
@@ -52,6 +53,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
     "pino": "^6.11.0",
     "randomcolor": "^0.6.2",
     "ts-node-dev": "^1.0.0-pre.56",
